<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical">
        <TextView
            android:layout_height="0dp"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:text="@string/placed"
                android:layout_weight="1" />
        <TextView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:id="@+id/tvCell"
            android:layout_weight="1" />
        <TextView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/scan_goods"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button_process"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/finish" />
    </LinearLayout>
</FrameLayout>